--- a/src/components/btn_part/btn_part.css
+++ b/src/components/btn_part/btn_part.css
@@ -1,14 +1,48 @@
 .all_hams{
     width: 560px;
     margin: auto;
+    padding: 10px;
+    border-radius: 25px;
+    background: rgb(28,31,36);
 }
 .hams_manu{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+.hams_menu_part_01{
+    cursor: pointer;
+    border-radius: 15px;
+    text-align: center;
+    width: 180px;
+    background: rgb(42, 43, 42);
+}
 .img_menu_part_coin{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.img_menu_part_coin{
+    height: 30px;
+}
+.hams_menu_P{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+#pribl{
+    color: orange;
+}
+#monet{
+    color: blue;
+}
+#chas{
+    color: green;
+}
+.hams_coin001{
+    height: 30px;
+}
+.sum_cin_part{
+    font-size: 20px;
+    font-weight: 700;
+    color: #fff;
 }
