--- a/src/components/menu_part/menu_part.css
+++ b/src/components/menu_part/menu_part.css
@@ -6,6 +6,8 @@
     align-items: center;
     background: rgb(39,42,47);
     padding: 10px;
+    margin-top: 15px;
+    border-radius: 10px;
 }
 .btn_part_01{
     width: 110px;
